--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<td>Professor at the <a href="http://www.dei.ist.utl.pt/">Department of Computer Science and Engineering</a> of <a href="http://www.ist.utl.pt/">Instituto Superior T&eacute;cnico</a> in the <a href="http://www.ulisboa.pt/">University of Lisbon</a>.</td>
 				</tr>
 				<tr>
-					<td>Researcher in the <a href="http://idss.inesc-id.pt">Information and Decision Support Systems Lab</a> at <a href="https://www.inesc-id.pt">INESC-ID</a>.</td>
+					<td>Researcher at the <a href="http://idss.inesc-id.pt">Information and Decision Support Systems Lab</a> of <a href="https://www.inesc-id.pt">INESC-ID</a>.</td>
 				</tr>
 				<tr>
 					<td>&nbsp;</td>
@@ -506,7 +506,7 @@ involved in several research projects related to geospatial aspects in informati
 			</ul>
 			<h3>PhD Students</h3>
 			<ul>
-			<li>Tiago Gonçalves, <i>Visual Analysis of Human Mobility Data</i>, FCUL (<i>ongoing co-supervision with Prof. Ana Paula Afonso</i>)</li>
+			<li>Tiago Gonçalves, <i>Visual Analysis of Human Mobility Data</i>, FCUL (<i>co-supervision with Prof. Ana Paula Afonso</i>)</li>
 			<li>Miguel Costa, <i>Summarizing News Articles</i>, IST (<i>ongoing</i>)</li> 
 			<li>João Monteiro, <i>Mining multi-source and multi-modal geo-referenced information</i>, IST (<i>ongoing co-supervision with Prof. João Moura Pires</i>)</li>
 			<li>Manuel Reis, <i>High performance computing for machine learning and geospatial data mining applications</i>, IST (<i>ongoing co-supervision with Prof. Paolo Romano</i>)</li>
@@ -747,6 +747,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>Ph.D. evaluation comittees: </strong>
+						<a href="https://scholar.google.com/citations?user=yyYfPJ8AAAAJ&hl=en">Gustavo Laboreiro</a> |
 						<a href="https://www.researchgate.net/profile/Zhaochen_Guo">Zhaochen Guo</a> | 
 						<!-- <a href="https://www.l2f.inesc-id.pt/w/Paula_Cristina_Vaz_Lobo">Paula Vaz</a> | -->
 						<a href="http://josedevezas.com/">José Devezas</a> | 
