--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>International Journal Papers</h3>
 
 			<ul>
+<li>Jacques Fize, Ludovic Moncla, and Bruno Martins, <i>Deep Learning for Toponym Resolution: Geocoding Based on Pairs of Toponyms</i>, ISPRS International Journal of Geo-Information, 2021 [<a href="https://www.mdpi.com/2220-9964/10/12/818">PDF</a>]</li>
 <li>João Monteiro, Bruno Martins, Miguel Costa, and João M. Pires, <i>Geospatial Data Disaggregation Through Self-Trained Encoder-Decoder Convolutional Models</i>, ISPRS International Journal of Geo-Information, 2021 [<a href="https://www.mdpi.com/2220-9964/10/9/619">PDF</a>]</li>
 <li>Danielle Caled, Mário J. Silva, Bruno Martins, and Miguel Won, <i>Multi-Label Classification of Legislative Contents with Hierarchical Label Attention Networks</i>, International Journal on Digital Libraries, 2021 [<a href="">PDF</a>]</li>
 <!-- <li>Luís Borges, and Bruno Martins, <i>Evaluating Neural Methods for Approximate String Matching and Duplicate Detection</i>, ACM Journal of Data and Information Quality, 2020 [<a href="">PDF</a>]</li> -->
