--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Rita Ramos, <i>Deep Learning Methods Bridging Language and Vision</i>, IST/KU.DK (<i>ongoing co-supervision with Prof. Desmond Elliott</i>)</li>
 			<li>André Neves, <i>Deep Learning for Remote Sensing Applications</i>, FCT-UNL (<i>ongoing co-supervision with Prof. João Moura Pires and Prof. Carlos Damásio</i>)</li>			
 			<li>Gonçalo Raposo, <i>Conversational Search</i>, IST (<i>ongoing co-supervision with Prof. Luísa Coheur</i>)</li>
-			<li>Isabel Coutinho, <i>Clinical Text Mining</i>, IST</li>
+			<li>Isabel Coutinho, <i>Clinical Text Mining</i>, IST (<i>ongoing</i>)</li>
 			<li>Martin Mirakyan, <i>Neural Architecture Search</i>, IST (<i>ongoing co-supervision with Paolo Romano</i>)</li>
 			</ul>
 			<h3>MSc Students</h3>
