--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Catarina Gatinho, <a href=""><i>Geospatial Language Understanding</i></a>, IST, 2022</li> <!-- ?? valores -->
 			<li>José Malaquias, <a href=""><i>Natural Language Processing Leveraging Entity-Aware Representations</i></a>, IST, 2022 (<i>co-supervised with Dr. Pedro Mota</i>)</li> <!-- ?? valores -->			
 			<li>Diogo Moura, <a href=""><i>Neural Models Models Relating Natural Language and Images</i></a>, IST, 2022 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
-			<!-- <li>José Castro, <a href=""><i>Neural Retrieval Models for Matching Patients to Clinical Trials</i></a>, IST, 2022 (<i>co-supervised with Prof. João Magalhães</i>)</li> --> <!-- ?? valores -->	
+			<li>João Pereira, <a href=""><i>Neural Retrieval Models for Matching Patients to Clinical Trials</i></a>, IST, 2022 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- ?? valores -->	
 			</ul>
 		</td>
     </tr>
