--- a/index.html
+++ b/index.html
@@ -570,10 +570,10 @@ involved in several research projects related to geospatial aspects in informati
 			<li>João Monteiro, <i>Deep Learning for Geospatial Data Analysis Applications</i>, IST (<i>ongoing co-supervision with Prof. João Moura Pires</i>)</li>
 			<li>Luís Borges, <i>Neural Information Retrieval</i>, IST/CMU-PT (<i>ongoing co-supervision with Prof. Jamie Callan</i>)</li>
 			<li>Rita Ramos, <i>Deep Learning Methods Bridging Language and Vision</i>, IST/KU.DK (<i>ongoing co-supervision with Prof. Desmond Elliott</i>)</li>
-			<li>André Neves, <i>Deep Learning for Remote Sensing Applications</i>, FCT-UNL (<i>ongoing co-supervision with Prof. João Moura Pires and Prof. Carlos Damásio</i>)</li>			
+			<!-- <li>André Neves, <i>Deep Learning for Remote Sensing Applications</i>, FCT-UNL (<i>ongoing co-supervision with Prof. João Moura Pires and Prof. Carlos Damásio</i>)</li> -->			
 			<li>Gonçalo Raposo, <i>Conversational Search</i>, IST (<i>ongoing co-supervision with Prof. Luísa Coheur</i>)</li>
 			<li>Isabel Coutinho, <i>Clinical Text Mining</i>, IST (<i>ongoing</i>)</li>
-			<li>Martin Mirakyan, <i>Neural Architecture Search</i>, IST (<i>ongoing co-supervision with Paolo Romano</i>)</li>
+			<!-- <li>Martin Mirakyan, <i>Neural Architecture Search</i>, IST (<i>ongoing co-supervision with Paolo Romano</i>)</li> -->
 			</ul>
 			<h3>MSc Students</h3>
 			<ul>
