--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Tiago Mesquita, <a href=""><i>Neural Approaches for Question Retrieval and Generation from FAQ Databases</i></a>, IST, 2021 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- 19 valores -->
 			<li>João Coelho, <a href=""><i>Spatio-Temporal Question Answering Leveraging Neural Language Models for Passage Retrieval</i></a>, IST, 2021 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- 19 valores -->
 			<li>Nuno Infante, <a href=""><i>Clinical Text Summarization</i></a>, IST, 2021 (<i>co-supervised with Dr. Nuno Silva</i>)</li> <!-- 16 valores -->
-			<li>Marcos Barata, <a href=""><i>Hybrid Approaches for Spatial Data Interpolation</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->	
+			<li>Marcos Barata, <a href=""><i>Hybrid Approaches for Spatial Data Interpolation</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- 14 valores -->	
 				
 			<!-- <li>Luís Antunes, <a href=""><i>Deep Learning Methods for Segmenting, Coloring, and Super-Resolving Historical Aerial Photos</i></a>, IST, 2020 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores -->
 			<!-- <li>Gonçalo Simões, <a href=""><i>Deep Learning for Flood Extent Mapping</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> --> <!-- ?? valores --> 
@@ -740,9 +740,10 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of organization committees: </strong>
+						<a href="http://epia2021.inesc-id.pt">EPIA'22</a> |
+						<a href="http://sigspatial2022.sigspatial.org">SIGSPATIAL'22</a> |
 						<a href="https://udi.ornl.gov/geoai2019">GeoAI'21</a> |
 						<a href="https://stko.geog.ucsb.edu/geokg-geoai2020/">GeoKG-GeoAI 2020</a> |
-						<a href="http://epia2021.inesc-id.pt">EPIA'21</a> |
 						<a href="http://eamt2020.inesc-id.pt">EAMT'20</a> |
 						<a href="https://ecir2020.org">ECIR'20</a> |
 						<a href="https://bgmartins.github.io/sigspatial-geohumanities/">SIGSPATIAL GeoHumanities'19</a> |
