--- a/index.html
+++ b/index.html
@@ -725,7 +725,9 @@ involved in several research projects related to geospatial aspects in informati
 			
 			<li>Diogo Moura, <a href=""><i>Neural Models Models Relating Natural Language and Images</i></a>, IST, 2022 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>João Pereira, <a href=""><i>Neural Retrieval Models for Matching Patients to Clinical Trials</i></a>, IST, 2022 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- ?? valores -->	
-			<li>Miguel Gonçalves, <a href=""><i>Transformer Models for Remote Sensing Image Segmentation</i></a>, IST, 2022 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->			
+			<li>Miguel Gonçalves, <a href=""><i>Transformer Models for Remote Sensing Image Segmentation</i></a>, IST, 2022 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
+			<li>Francisco Guedes, <a href=""><i>Visual Question Answering with Remote Sensing Imagery</i></a>, IST, 2022 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->						
+			<li>Gonçalo Mendes, <a href=""><i>Estimating Emotional Valence and Arousal with Transformer-Based Language Models</i></a>, IST, 2022</li> <!-- ?? valores -->						
 			</ul>
 		</td>
     </tr>
