--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of organization committees: </strong>
-						<a href="http://epia2021.inesc-id.pt">EPIA'22</a> |
+						<a href="http://epia2022.inesc-id.pt">EPIA'22</a> |
 						<a href="http://sigspatial2022.sigspatial.org">SIGSPATIAL'22</a> |
 						<a href="https://udi.ornl.gov/geoai2019">GeoAI'21</a> |
 						<a href="https://stko.geog.ucsb.edu/geokg-geoai2020/">GeoKG-GeoAI 2020</a> |
@@ -784,6 +784,9 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://ds2022.sciencesconf.org/">DS'22</a> |						
+						<a href="https://sites.google.com/view/socialnlp2022/">SocialNLP'22</a> |						
+						<a href="https://dhere.de/locweb/locweb2022/">LocWeb'22</a> |						
 						<a href="https://text2story22.inesctec.pt">Text2Story'22</a> |
 						<a href="https://ecir2022.org">ECIR'22</a> |
 						<a href="http://www.sigapp.org/sac/sac2022/">SAC'22</a> |
