--- a/index.html
+++ b/index.html
@@ -352,6 +352,8 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<li>Marina Georgati, João Monteiro, Bruno Martins, and Carsten Keßler, <i>Spatial Disaggregation of Population Subgroups Leveraging Self-Trained Multi-Output Gradient Boosted Regression Trees</i>, Proceedings of the AGILE International Conference on Geographic Information Science, 2022 [<a href="">PDF</a>] </li>
+<li>Krzysztof Janowicz, Rui Zhu, Grant McKenzie, Judith Verstegen, Bruno Martins, and Ling Cai, <i>Six GIScience Ideas That Must Die</i>, Proceedings of the AGILE International Conference on Geographic Information Science, 2022 [<a href="">PDF</a>] </li>				
 <li>Rita Parada Ramos, and Bruno Martins, Remote Sensing Image Captioning with Continuous Output Neural Models. Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2021 [<a href="https://dl.acm.org/doi/abs/10.1145/3474717.3483631">PDF</a>]</li>
 <li>João Coelho, João Magalhães, and Bruno Martins, Improving Neural Models for the Retrieval of Relevant Passages to Geographical Queries. Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2021 [<a href="https://dl.acm.org/doi/abs/10.1145/3474717.3483960">PDF</a>]</li>
 <li>Rita Parada Ramos, Patricia Pereira, Helena Moniz, João Paulo Carvalho, and Bruno Martins, Retrieval Augmentation for Deep Neural Networks. Proceedings of the INNS/IEEE International Joint Conference on Neural Networks, 2021 [<a href="https://ieeexplore.ieee.org/document/9533978">PDF</a>]</li>				
@@ -786,6 +788,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://agile-online.org/conference-2022">AGILE'21</a> |
 						<a href="http://tpdl2022.dei.unipd.it">TPDL'22</a> |
 						<a href="https://ds2022.sciencesconf.org/">DS'22</a> |						
 						<a href="https://sites.google.com/view/socialnlp2022/">SocialNLP'22</a> |						
@@ -800,7 +803,7 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="http://www.conll.org/2021">CoNLL'21</a> |
 						<a href="http://sigspatial2021.sigspatial.org">SIGSPATIAL'21</a> |
 						<a href="http://www.kdd.org/kdd2021/">KDD'21</a> |
-						<a href="https://web.fe.up.pt/~prodei/dsie21/">DSIE’2021</a> |						
+						<a href="https://web.fe.up.pt/~prodei/dsie21/">DSIE’2021</a> |
 						<a href="https://agile-online.org/conference-2021">AGILE'21</a> |
 						<a href="https://www.giscience.org">GIScience'21</a> |
 						<a href="http://www.tpdl.eu/tpdl2021/">TPDL'21</a> |
