--- a/index.html
+++ b/index.html
@@ -352,6 +352,8 @@ involved in several research projects related to geospatial aspects in informati
 			<h3>Conference and Workshop Papers</h3>
 
 			<ul>
+<li>Gil Rocha, Luís Trigo, Henrique Lopes Cardoso, Rui Sousa-Silva, Paula Carvalho, Bruno Martins, and Miguel Won, <i>Annotating Arguments in a Corpus of Opinion Articles</i>, Proceedings of the International Conference on Language Resources and Evaluation, 2022 [<a href="">PDF</a>] </li>
+<li>Gil Rocha, Bernardo Leite, Luís Trigo, Henrique Lopes Cardoso, Rui Sousa Silva, Paula Carvalho, Bruno Martins, and Miguel Won, <i>Predicting Argument Density from Multiple Annotations</i>, Proceedings of the International Conference on Natural Language & Information Systems, 2022 [<a href="">PDF</a>] </li>
 <li>Marina Georgati, João Monteiro, Bruno Martins, and Carsten Keßler, <i>Spatial Disaggregation of Population Subgroups Leveraging Self-Trained Multi-Output Gradient Boosted Regression Trees</i>, Proceedings of the AGILE International Conference on Geographic Information Science, 2022 [<a href="">PDF</a>] </li>
 <li>Krzysztof Janowicz, Rui Zhu, Grant McKenzie, Judith Verstegen, Bruno Martins, and Ling Cai, <i>Six GIScience Ideas That Must Die</i>, Proceedings of the AGILE International Conference on Geographic Information Science, 2022 [<a href="">PDF</a>] </li>				
 <li>Rita Parada Ramos, and Bruno Martins, Remote Sensing Image Captioning with Continuous Output Neural Models. Proceedings of the ACM SIGSPATIAL International Conference on Advances in Geographic Information Systems, 2021 [<a href="https://dl.acm.org/doi/abs/10.1145/3474717.3483631">PDF</a>]</li>
