--- a/index.html
+++ b/index.html
@@ -749,15 +749,21 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of organization committees: </strong>
+						<a href="http://essir2022.org">ESSIR'22</a> |						
+						<a href="http://lxmls.it.pt/">LxMLS'22</a> |						
+						<a href="https://ludovicmoncla.github.io/sigspatial-geohumanities-2022/">SIGSPATIAL GeoHumanities'22</a> |
+						<a href="https://udi.ornl.gov/geoai2022">GeoAI'22</a> |						
 						<a href="http://epia2022.inesc-id.pt">EPIA'22</a> |
 						<a href="http://sigspatial2022.sigspatial.org">SIGSPATIAL'22</a> |
+						<a href="http://lxmls.it.pt/2021/">LxMLS'21</a> |
 						<a href="https://udi.ornl.gov/geoai2019">GeoAI'21</a> |
+						<a href="http://lxmls.it.pt/2020/">LxMLS'20</a> |						
 						<a href="https://stko.geog.ucsb.edu/geokg-geoai2020/">GeoKG-GeoAI 2020</a> |
 						<a href="http://eamt2020.inesc-id.pt">EAMT'20</a> |
 						<a href="https://ecir2020.org">ECIR'20</a> |
 						<a href="https://bgmartins.github.io/sigspatial-geohumanities/">SIGSPATIAL GeoHumanities'19</a> |
 						<a href="https://udi.ornl.gov/geoai2019">GeoAI'19</a> |
-						<a href="http://lxmls.it.pt/">LxMLS'19</a> |
+						<a href="http://lxmls.it.pt/2019/">LxMLS'19</a> |
 						<a href="https://bgmartins.github.io/sigspatial-geohumanities/">SIGSPATIAL GeoHumanities'18</a> |
 						<a href="http://lxmls.it.pt/2018/">LxMLS'18</a> |
 						<a href="https://bgmartins.github.io/sigspatial-geohumanities/2017/">SIGSPATIAL GeoHumanities'17</a> |
@@ -989,7 +995,7 @@ involved in several research projects related to geospatial aspects in informati
 				<tr>
 					<td>
 					<ul><li>						
-						<strong>Ph.D. evaluation comittees: </strong>
+						<strong>Ph.D. evaluation comittees: </strong>						
 						<a href="">Herbert Pinto</a> |
 						<a href="https://vbn.aau.dk/en/persons/146477">Marina Georgati</a> |
 						<a href="https://www.hlt.inesc-id.pt/w/Eugénio_Ribeiro">Eugénio Alves Ribeiro</a> |
@@ -997,8 +1003,10 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="https://deepai.org/machine-learning/researcher/daniel-loureiro">Daniel Loureiro</a> |
 						<a href="https://scholar.google.com/citations?user=Vbw_-e8AAAAJ&hl=en">Gil Rocha</a> |
 
+						<a href="https://welcome.isr.tecnico.ulisboa.pt/author/danielamedley/">Daniela Oliveira Medley</a> |
+						<a href="">João Manuel Silva</a> |
+						<a href="http://www.gsd.inesc-id.pt/~dcastro/">Daniel Castro</a> |
 						<a href="https://www.linkedin.com/in/miguel-e-coimbra-65a20a57/">Miguel Coimbra</a> |
-						<a href="http://www.gsd.inesc-id.pt/~dcastro/">Daniel Castro</a> |						
 						<a href="http://josedevezas.com/">José Devezas</a> | 						
 						<a href="https://www.researchgate.net/profile/Sarah_Valentin4">Sarah Valentin</a> |	
 						<a href="http://www.contrib.andrew.cmu.edu/~baojiany/">Baojiang (Chris) Yang</a> | 
