--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of organization committees: </strong>
-						<a href="http://essir2022.org">ESSIR'22</a> |						
+						<a href="http://essir2022.org">ESSIR'22</a> |		
 						<a href="http://lxmls.it.pt/">LxMLS'22</a> |						
 						<a href="https://ludovicmoncla.github.io/sigspatial-geohumanities-2022/">SIGSPATIAL GeoHumanities'22</a> |
 						<a href="https://udi.ornl.gov/geoai2022">GeoAI'22</a> |						
@@ -790,6 +790,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://ictai.computer.org/2022/">ICTAI'22</a> |
 						<a href="https://conll.org">CoNLL'22</a> |
 						<a href="https://2022.emnlp.org">EMNLP'22</a> |
 						<a href="https://aaclweb.org">AACL-IJCNLP'22</a> |
@@ -1030,6 +1031,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="DEI-JOAO-PEDRO">Nuno Cordeiro</a> |
 						<a href="DEI-VINGA">Michael Madeira</a> |
 						
 						<a href="NOVA">Rafaela Cruz</a> |
