--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="https://sites.google.com/view/socialnlp2022/">SocialNLP'22</a> |						
 						<a href="https://dhere.de/locweb/locweb2022/">LocWeb'22</a> |						
 						<a href="https://text2story22.inesctec.pt">Text2Story'22</a> |
-						<a href="https://ecir2022.org">ECIR'22</a> |
+						<a href="https://ecir2022.org">ECIR'22</a> (Recognized Reviewer Award) |
 						<a href="http://www.sigapp.org/sac/sac2022/">SAC'22</a> |
 						<a href="https://aaai.org/Conferences/AAAI-22/">AAAI'22</a> |
 						<a href="https://sites.universidadedefortaleza.com/propor2022/">PROPOR'22</a> |
@@ -819,7 +819,7 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="https://2021.aclweb.org">ACL-IJCNLP'21</a> |
 						<a href="https://dsaa2021.dcc.fc.up.pt">IEEE DSAA'21</a> |
 						<a href="https://2021.naacl.org">NAACL-HLT'21</a> |
-						<a href="https://text2story21.inesctec.pt">Text2Story'21</a> (Recognized Reviewer Award)|
+						<a href="https://text2story21.inesctec.pt">Text2Story'21</a> (Recognized Reviewer Award) |
 						<a href="https://www.ecir2021.eu">ECIR'21</a> |
 						<a href="https://aaai.org/Conferences/AAAI-21/">AAAI'21</a> |
 						<a href="https://2021.eacl.org">EACL'21</a> |
@@ -831,9 +831,9 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="https://ornlcda.github.io/SDProc/">SDP 2020</a> |
 						<a href="https://sites.google.com/site/socialnlp2020/">SocialNLP'20</a> |
 						<a href="https://ai4narratives20.inesctec.pt">AI4Narratives'20</a> |
-						<a href="https://2020.emnlp.org">EMNLP'20</a> (Recognized Reviewer Award)|
+						<a href="https://2020.emnlp.org">EMNLP'20</a> (Recognized Reviewer Award) |
 						<a href="http://aacl2020.org">AACL-IJCNLP'20</a> |
-						<a href="https://text2story21.inesctec.pt">Text2Story'20</a> (Recognized Reviewer Award)|
+						<a href="https://text2story21.inesctec.pt">Text2Story'20</a> (Recognized Reviewer Award) |
 						<a href="https://www.maisonworkshop.org">MAISoN'20</a> |
 						<a href="http://eric.univ-lyon2.fr/adbis-tpdl-eda-2020/tpdl/">TPDL'20</a> |
 						<a href="http://www.kdd.org/kdd2020/">KDD'20</a> |
