--- a/index.html
+++ b/index.html
@@ -690,10 +690,10 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Miguel Froes, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mebiom/dissertacao/846778572212844"><i>Fenotipagem na Multimorbilidade</i></a>, IST, 2020 (<i>co-supervised with Prof. Mário Silva and Dr. Bernardo Neves</i>)</li> <!-- 18 valores -->
 			<li>Luís Pereira, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mebiom/dissertacao/1128253548922233"><i>Attention Augmented Convolutional Neural Networks for the Classification of Medical Images</i></a>, IST, 2020</li> <!-- 16 valores -->
 			<li>Olavo Bacelar, <a href="https://fenix.tecnico.ulisboa.pt/cursos/mma/dissertacao/1409728525633135"><i>Deep Energy Networks for Data Completion</i></a>, IST, 2021 (<i>co-supervised with Prof. Conceição Amado and Prof. André Martins</i>)</li> <!-- 18 valores -->				
+
 			<li>Rita Conde, <a href=""><i>Predição de eventos em comércio online e sua interação com pesquisas</i></a>, IST, 2021 (<i>co-supervised with Dr. Pedro Balage</i>)</li> <!-- 16 valores -->
 			<li>André Godinho, <a href=""><i>Neural Approaches for Conversational Question Answering</i></a>, IST, 2021 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- 19 valores -->
 			<li>Diogo Viegas, <a href=""><i>Document Geocoding and Toponym Resolution with Neural Language Models</i></a>, IST, 2021 (<i>co-supervised with Prof. Maguelonne Teisseire</i>)</li> <!-- 18 valores -->
-
 			<li>João Barata, <a href=""><i>Deep Learning for Remote Sensing Image Captioning</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- 19 valores -->
 			<li>Martin Mirakyan, <a href=""><i>Neural Architecture Search for Semantic Segmentation of Aerial Imagery</i></a>, IST, 2021 (<i>co-supervised with Prof. Paolo Romano</i>)</li> <!-- 19 valores -->
 			<li>Leonor Fernandes, <a href=""><i>Neural Methods for Biomedical Synonym Discovery and Concept Alignment</i></a>, IST, 2021 (<i>co-supervised with Dr. Daniel Faria</i>)</li> <!-- 17 valores -->
@@ -701,15 +701,13 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Tiago Mesquita, <a href=""><i>Neural Approaches for Question Retrieval and Generation from FAQ Databases</i></a>, IST, 2021 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- 19 valores -->
 			<li>João Coelho, <a href=""><i>Spatio-Temporal Question Answering Leveraging Neural Language Models for Passage Retrieval</i></a>, IST, 2021 (<i>co-supervised with Prof. João Magalhães</i>)</li> <!-- 19 valores -->
 			<li>Nuno Infante, <a href=""><i>Clinical Text Summarization</i></a>, IST, 2021 (<i>co-supervised with Dr. Nuno Silva</i>)</li> <!-- 16 valores -->
-			<li>Marcos Barata, <a href=""><i>Hybrid Approaches for Spatial Data Interpolation</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- 14 valores -->	
-			<li>Sérgio Zaera Mata, <a href=""><i>Remote Sensing Image Captioning</i></a>, IST, 2022</li> <!-- 14 valores -->
-								
-			<li>Inês Filipe, <a href=""><i>Classification of Chest X-Ray Images with Deep Neural Networks for Detecting COVID-19</i></a>, IST, 2021 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
-			<li>Francisco Matos, <a href=""><i>Delineating Boundaries for Vague Regions</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->				
-			<li>Filipe Amaral, <a href=""><i>Argumentation mining from textual documents combining deep learning and reasoning</i></a>, IST, 2021 (<i>co-supervised with Prof. Helena Sofia Pinto</i>)</li> <!-- ?? valores -->
-			
-			<li>Artur Guimarães, <a href=""><i>Key-phrase Extraction Combining Graph-Based Methods and Neural Language Models</i></a>, IST, 2021 (<i>co-supervised with Prof. Mathieu Roche</i>)</li> <!-- ?? valores -->
-			<li>Filipe Martins, <a href=""><i>Deep Learning Methods for Processing Digitized Herbarium Specimens</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
+			<li>Marcos Barata, <a href=""><i>Hybrid Approaches for Spatial Data Interpolation</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- 14 valores -->
+			<li>Sérgio Zaera Mata, <a href=""><i>Remote Sensing Image Captioning</i></a>, IST, 2022</li> <!-- 15 valores -->				
+			<li>Inês Filipe, <a href=""><i>Classification of Chest X-Ray Images with Deep Neural Networks for Detecting COVID-19</i></a>, IST, 2021 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- 16 valores -->
+			<li>Francisco Matos, <a href=""><i>Delineating Boundaries for Vague Regions</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- 14 valores -->
+			<li>Filipe Amaral, <a href=""><i>Argumentation mining from textual documents combining deep learning and reasoning</i></a>, IST, 2021 (<i>co-supervised with Prof. Helena Sofia Pinto</i>)</li> <!-- 17 valores -->
+			<li>Artur Guimarães, <a href=""><i>Key-phrase Extraction Combining Graph-Based Methods and Neural Language Models</i></a>, IST, 2021 (<i>co-supervised with Prof. Mathieu Roche</i>)</li> <!-- 17 valores -->
+			<li>Filipe Martins, <a href=""><i>Deep Learning Methods for Processing Digitized Herbarium Specimens</i></a>, IST, 2021 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- 12 valores -->
 
 			<li>André Leite, <a href=""><i>Neural Models for Generating Clinically Accurate Chest X-Ray Reports</i></a>, IST, 2022 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
 			<li>Duarte Miranda, <a href=""><i>Neural Retrieval Models for the Portuguese Language</i></a>, IST, 2022 (<i>co-supervised with Dra. Mariana Almeida</i>)</li> <!-- ?? valores -->				
