--- a/index.html
+++ b/index.html
@@ -789,6 +789,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>
 						<strong>Member of programe committees and reviewer: </strong>
+						<a href="https://www.wsdm-conference.org/2023/">WSDM'23</a> |
 						<a href="https://ictai.computer.org/2022/">ICTAI'22</a> |
 						<a href="https://conll.org">CoNLL'22</a> |
 						<a href="https://2022.emnlp.org">EMNLP'22</a> |
