--- a/index.html
+++ b/index.html
@@ -727,6 +727,13 @@ involved in several research projects related to geospatial aspects in informati
 			<li>Miguel Gonçalves, <a href=""><i>Transformer Models for Remote Sensing Image Segmentation</i></a>, IST, 2022 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->
 			<li>Francisco Guedes, <a href=""><i>Visual Question Answering with Remote Sensing Imagery</i></a>, IST, 2022 (<i>co-supervised with Prof. Jacinto Estima</i>)</li> <!-- ?? valores -->						
 			<li>Gonçalo Mendes, <a href=""><i>Estimating Emotional Valence and Arousal with Transformer-Based Language Models</i></a>, IST, 2022</li> <!-- ?? valores -->						
+
+			<li>João Pedras, <a href=""><i>Remote Sensing Visual Question Answering</i></a>, IST, 2023</li> <!-- ?? valores -->
+			<li>Eduardo Ladeiras, <a href=""><i>Visually Grounded Speech Recognition </i></a>, IST, 2023 (<i>co-supervised with Prof. Alberto Abad</i>)</li> <!-- ?? valores -->
+			<li>Diogo Silva, <a href=""><i>Dialogue Summarization with Retrieval-Augmented Transformers</i></a>, IST, 2023 (<i>co-supervised with Prof. Luísa Coheur</i>)</li> <!-- ?? valores -->
+			<li>Diogo Ferrão, <a href=""><i>Object Detection Under Low-Light and Adverse Weather Conditions</i></a>, IST, 2023 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
+			<li>Mariana Chinopa, <a href=""><i>Geographically-Aware Image Captioning</i></a>, IST, 2023</li> <!-- ?? valores -->
+			<li>João Novo, <a href=""><i>Analysis of visual sensor data for monitoring of open spaces</i></a>, IST, 2023 (<i>co-supervised with Prof. Arlindo Oliveira</i>)</li> <!-- ?? valores -->
 			</ul>
 		</td>
     </tr>
@@ -1001,8 +1008,9 @@ involved in several research projects related to geospatial aspects in informati
 						<a href="https://deepai.org/machine-learning/researcher/daniel-loureiro">Daniel Loureiro</a> |
 						<a href="https://scholar.google.com/citations?user=Vbw_-e8AAAAJ&hl=en">Gil Rocha</a> |
 
+						<a href="https://www.linkedin.com/in/rui-portocarrero-sarmento-214564197/">Rui Sarmento</a> |
 						<a href="https://welcome.isr.tecnico.ulisboa.pt/author/danielamedley/">Daniela Oliveira Medley</a> |
-						<a href="">João Manuel Silva</a> |
+						<a href="https://www.linkedin.com/in/joaofigsilva/?originalSubdomain=pt">João Manuel Silva</a> |
 						<a href="http://www.gsd.inesc-id.pt/~dcastro/">Daniel Castro</a> |
 						<a href="https://www.linkedin.com/in/miguel-e-coimbra-65a20a57/">Miguel Coimbra</a> |
 						<a href="http://josedevezas.com/">José Devezas</a> | 						
@@ -1031,6 +1039,7 @@ involved in several research projects related to geospatial aspects in informati
 					<td>
 					<ul><li>						
 						<strong>M.Sc. evaluation comittees: </strong>
+						<a href="MECD-MARIO">Francisco Caldas</a> |
 						<a href="DEI-JOAO-PEDRO">Nuno Cordeiro</a> |
 						<a href="DEI-VINGA">Michael Madeira</a> |
 						
